# GElib

./: .gitignore  CMakeLists.txt
build_test_phase1/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json
build_test_phase1/O3/tests/: CTestTestfile.cmake  cmake_install.cmake
build_test_phase1/SO3/tests/: CTestTestfile.cmake  cmake_install.cmake
cnine_overrides_for_gelib/src/cnine/tensor/: Tensor.cpp  Tensor.hpp
python/: environment.yml  pyproject.toml  setup.py
python/examples/tensor_field_networks/: gravity.py  network_definition.py  nonlinearity_layer.py  point_convolution_layer.py
python/src/examples/: __init__.py
python/src/examples/codegen/: generator.py  tensor_recurser.py  tensor_recurser_client.py
python/src/examples/common/: convolution_calculator.py  convolution_layer_base.py  mlp_stack.py  point_cloud.py  point_cloud_factory.py  pyg_helper.py  radial_bessel_mlp.py  radial_bessel_mlp_stack.py  tfn_utils.py
python/src/examples/common/impl/: internal_caller.py  internal_type.py  point_cloud_aggregator.py  point_cloud_base.py  point_cloud_impl.py  pyg_helper_impl.py  pyg_point_cloud.py
python/src/examples/common/impl/pyg/: pyg_helper_impl.py  pyg_point_cloud.py  pyg_point_cloud_aggregator.py
python/src/examples/common/impl/util/: internal_caller.py  internal_type.py
python/src/examples/common/layers/: convolution_calculator.py  convolution_layer_base.py  linear.py  message_passing.py  mlp_stack.py  radial_bessel_mlp_stack.py  row_linear.py
python/src/examples/common/util/: internal_caller.py  internal_type.py  message_passing.py  mlp_stack.py  radial_bessel_mlp_stack.py
python/src/examples/cormorant/: cormorant_nonlinearity.py
python/src/examples/mace/: a_part.py  b_part.py
python/src/examples/nequip/: embedding_layer.py  interaction_block.py  nequip_convolution_layer.py  nequip_utils.py  output_block.py
python/src/examples/tensor_field_networks/: channel_mapper.py  concatenation_layer.py  gravity.py  nonlinearity_layer.py  point.py  point_convolution_layer.py  pyg_helper.py  self_interaction_layer.py  shape_classification.py  tfn_nonlinearity_layer.py  tfn_utils.py
python/src/gelib/: CGtensor.py  SO3bipart.py  SO3bipartArr.py  SO3bivec.py  SO3bivecArr.py  SO3mvec.py  SO3part.py  SO3partArr.py  SO3partArrC.py  SO3partB.py  SO3partC.py  SO3vec.py  SO3vecArr.py  SO3vecArrC.py  SO3vecB.py  SO3vecC.py  SO3weights.py  SO3weightsArr.py  Wigner.py  __init__.py
python/wrapper/: gather.py  layer.py  location.py  network.py  point.py  tfn_example.py  weight_registry.py
python/wrapper/examples/: tfn_example.py
python/wrapper/internal/: layer_base.py  network_impl.py  point_base.py  point_impl.py
